--- a/pages/blog.html
+++ b/pages/blog.html
@@ -123,19 +123,19 @@
         <div class="col-3 area_sub" style="background: url(../assets/images/china_blog.jpg) no-repeat; background-size: 100% 60%;">
             <div class="col-3 text_area_sub">
                 <p class="title" style="margin:0;">China tightens border-control</p>
-                <p class="content">On the 15th of October, China made the move to tighten their border restrictions. Effective 20th October, now travellers going into Mainland China are expected to... <br> <a href="#">Read More</a></p>
+                <p class="content">On the 15th of October, China made the move to tighten their border restrictions. Effective 20th October, now travellers going into Mainland China are expected to... <a href="#">Read More</a></p>
             </div>
         </div>
         <div class="col-3 area_sub" style="background: url(../assets/images/xbb_blog.jfif) no-repeat; background-size: 100% 60%;">
             <div class="col-3 text_area_sub">
                 <p class="title" style="margin:0;">XBB Strain. Mighty or Mini?</p>
-                <p class="content">The new Covid-19 strain XBB is scaring people around the word, leading to rampant fearmongering and a buildup of stress for many workers who now are being forced to return to their workplaces... <br><a href="#">Read More</a></p>
+                <p class="content">The new Covid-19 strain XBB is scaring people around the word, leading to rampant fearmongering and a buildup of stress for many workers who now are being forced to return to their workplaces... <a href="#">Read More</a></p>
             </div>
         </div>
         <div class="col-3 area_sub">
             <div class="col-3 text_area_sub" style="background: url(../assets/images/landscape_blog.jpg) no-repeat; background-size: 100% 60%;">
                 <p class="title" style="margin:0;">Other news about Covid-19 restrictions in Southeast Asia</p>
-                <p class="content">Along with Singapore, many other popular travel destinations are starting to ease up on their border restrictions, but a few particular countries have chosen to tighten their border control in view of the most recent covid strain...<br> <a href="#">Read More</a></p>
+                <p class="content">Along with Singapore, many other popular travel destinations are starting to ease up on their border restrictions, but a few particular countries have chosen to tighten their border control in view of the most recent covid strain... <a href="#">Read More</a></p>
             </div>
         </div>
     </div>
