--- a/pages/cart_pcr_prefilled.html
+++ b/pages/cart_pcr_prefilled.html
@@ -424,6 +424,7 @@
                     </div>
                     <div class="modal-body" style="margin-top: 5%; text-align: center; font-size: 20px; ">
                         Your order has been submitted.
+                        Check your email for confirmation and booking details.
                     </div>
                     <div class="modal-footer" style="border: none;">
                         <button type="button" class="btn btn-secondary" id="modalclosebtn" data-bs-dismiss="modal"
